@@ -2,6 +2,5 @@ package ru.mrchebik.plugin;
 
 public interface PluginWrapper {
     void start();
-
     void complete();
 }
