@@ -1,0 +1,5 @@
+package ru.mrchebik.plugin.debug;
+
+public interface PluginDebugWrapper {
+    void complete();
+}
