@@ -1,0 +1,9 @@
+package ru.mrchebik.plugin.debug.os;
+
+public interface OsPluginDebugWrapper {
+    String[] getCommand();
+
+    String computeOutput(StringBuilder input);
+
+    boolean isSupported();
+}
