@@ -1,0 +1,8 @@
+package ru.mrchebik.plugin.debug.os;
+
+public class OsUnsupported extends OsPluginDebug implements OsPluginDebugWrapper {
+    @Override
+    public boolean isSupported() {
+        return false;
+    }
+}
